OpenSLP Change Log (HEAD)
-------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================
01/24/2002 matt@caldera.com
Changed the code in slpd_property.c to use the functions in slp_net.c and
slp_iface.c to get interface and hostname information

01/24/2002 matt@caldera.com
Moved URL parsing code to common code (slp_parse.c) and added a few network
utility functions (slp_net.c).  Modified slpd code so that DAs are contacted
via the IP address in the DAAdvert not the source address of the datagram.

*** Tag merged OpenSLP 1.0.6 ***

11/29/01 matt@caldera.com
Finished the initial addition of all the new multicast code with significant
help from Satya and Venu.

*** Tag merged OpenSLP 1.0.5 ***

*** Tag merged OpenSLP 1.0.4 ***

*** Tag merged OpenSLP 1.0.3 ***

*** Tag merged OpenSLP 1.0.2 ***

07/25/01 matt@caldera.com
Fixed minor KnownDAEcho problem that resulted in some DAs not getting
registrations.

07/25/01 matt@caldera.com
Fixed init order so that LOCAL or (API registered) services will be
preserved on reset or SIGHUP

07/25/01 matt@caldera.com
Applied Michael Sweet's patch to configure.in that allows use of CFLAGS and
LDFLAGS

07/25/01 matt@caldera.com
Fixed parsing problem in SLPParseSrvURL() that could cause SEGV

07/23/01 matt@caldera.com
Branched CVS into stable-1-0 and HEAD

*** Tag OpenSLP 1.0.0 ****

07/18/01 matt@caldera.com
Fixed couple very minor memory leaks in slpd

07/13/01 matt@caldera.com
Fixed slp.conf parsing problem when properties are set to empty string

07/13/01 matt@caldera.com
Fixed possible SEGV when an unset property is accessed

07/13/01 matt@caldera.com
Added the getproperty feature to slptool

07/11/01 matt@caldera.com
Applied Todd Poynor's patches to slpd_knownda.c
